--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>HTML5 Doodle Jump</title>
+    <title>HTML5 rocket Jump</title>
     <link rel="stylesheet" href="style.css">
 
     <script src="/assets/js/prefixfree.min.js"></script>
@@ -40,7 +40,7 @@
       </div>
 
       <!-- Preloading image ;) -->
-      <img id="sprite" src="sprite.png"/>
+      <img id="imgres.jpg" src="imgres.png"/>
 
       <div id="scoreBoard">
         <p id="score">0</p>
