--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
 
       <!-- Preloading image ;) -->
-      <img id="imgres.jpg" src="imgres.png"/>
+      <img id="sprite.jpg" src="sprite.png"/>
 
       <div id="scoreBoard">
         <p id="score">0</p>
